# telegram-text-to-bluesky-post

./: .env.example  .gitignore  README.md  bluesky-agent.py  pyproject.toml
agents/: finetune_model.py  llama_3_2_ollama.py  phi_3_mini_4k_instruct_ft_on_didier_blog.py
agents/tools/: grok.py  openbb.py  perplexity.py  tools4agent.py
experiments/: api-call-my-fine-tune-model.ipynb  bluesky-api.ipynb  telegram-api.py  test_grok.py  test_openbb.py  test_perplexity.py
